/*
 * Copyright IBM Corp. 2018 All Rights Reserved.
 *
 * SPDX-License-Identifier: Apache-2.0
 */

apply plugin: 'idea'
apply plugin: 'eclipse-wtp'

allprojects {
	repositories {
		mavenLocal()
		jcenter()
		// hyperledger snapshots repository
		maven {
			url 'https://nexus.hyperledger.org/content/repositories/snapshots'
			name 'hyperledger-snapshots'
		}
		// hyperledger release repository
		maven {
			url 'https://nexus.hyperledger.org/content/repositories/releases'
			name 'hyperledger-releases'
		}
	}
}

configure(subprojects - project(':examples') - project(':javaenv')) {
	apply plugin: 'java'
	apply plugin: 'maven'

	group = "org.hyperledger.fabric"
	version = '1.2.0-SNAPSHOT'

	sourceCompatibility = 1.8
	targetCompatibility = 1.8

	dependencies {
		compile 'commons-cli:commons-cli:1.4'
		compile 'commons-logging:commons-logging:1.2'

		testCompile 'junit:junit:4.12'
		testCompile 'org.hamcrest:hamcrest-library:1.3'
		testCompile 'org.mockito:mockito-core:2.+'
	}
}
